--- a/src/blocks/modules/our-blog/our-blog.scss
+++ b/src/blocks/modules/our-blog/our-blog.scss
@@ -26,6 +26,10 @@
 
         display: none;
 
+        @media screen and (min-width: $w1200) {
+            padding-left: 65px;
+        }
+
         @media screen and (min-width: $w760) {
             padding-bottom: 15px;
             display: block;
@@ -44,10 +48,18 @@
     &__title {
         @include section-title;
         padding-bottom: 35px;
+
+        @media screen and (min-width: $w1200) {
+            padding-left: 65px;
+        }
     }
 
     &__last {
         display: none;
+
+        @media screen and (min-width: $w1200) {
+            padding-left: 30px;
+        }
 
         @media screen and (min-width: $w760) {
             display: block;
