--- a/src/styles/base/_general.scss
+++ b/src/styles/base/_general.scss
@@ -7,8 +7,6 @@ html {
     background: #fff;
     color: #000;
     letter-spacing: normal;
-
-
 }
 
 
@@ -127,23 +125,23 @@ main {
 
 ::-webkit-input-placeholder {
     /* Chrome */
-    color: $main;
+    color: $gray;
 }
 
 :-ms-input-placeholder {
     /* IE 10+ */
-    color: $main;
+    color: $gray;
 }
 
 ::-moz-placeholder {
     /* Firefox 19+ */
-    color: $main;
+    color: $gray;
     opacity: 1;
 }
 
 :-moz-placeholder {
     /* Firefox 4 - 18 */
-    color: $main;
+    color: $gray;
     opacity: 1;
 }
 
