--- a/src/styles/helpers/_variables.scss
+++ b/src/styles/helpers/_variables.scss
@@ -1,4 +1,4 @@
-$main: #9C938C;
+$main: #BF3232;
 $black: #222B32;
 $white: #fff;
 $darkViolet: #161b37;
@@ -8,7 +8,7 @@ $grayBlue: #86A5C1;
 $red: #BF3232;
 $pink: #fe3e77;
 $dark: #222B32;
-$gray: #F6F6F6;
+$gray: #B7B7B7;
 $lgray: #ccc;
 $mgray: #b8b8b8;
 $yellow: #ffd223;
