--- a/src/blocks/modules/_modules.scss
+++ b/src/blocks/modules/_modules.scss
@@ -21,3 +21,6 @@
 @import "block-faq/block-faq.scss";
 @import "detail-fulltext/detail-fulltext.scss";
 @import "services-for-auto/services-for-auto.scss";
+
+/* about */
+@import "our-team/our-team.scss";
