--- a/src/blocks/modules/video-block/video-block.scss
+++ b/src/blocks/modules/video-block/video-block.scss
@@ -1,5 +1,7 @@
 .section-video-block {
     @include section-padding;
+
+    overflow: visible
 }
 
 .video-block {
@@ -158,5 +160,65 @@
         font-size: 28px;
         line-height: 125%;
         color: #BF3232;
+    }
+}
+
+.aside-list {
+
+    @media screen and (min-width: $w992) {
+        position: sticky;
+        top: 30px;
+    }
+
+    &__subtitle {
+        @include section-subtitle;
+        padding-bottom: 25px;
+    }
+
+    &__list {
+
+
+
+
+        & ul {
+
+            @include row-flex;
+
+            @media screen and (min-width: $w760) {
+                padding-top: 20px;
+            }
+
+            & li {
+
+                @include col;
+                @include size(12);
+                @include size-w767(6);
+                @include size-w1200(12);
+
+                position: relative;
+                padding-left: 30px;
+                font-size: 16px;
+                padding-bottom: 20px;
+
+
+
+                &:last-child {
+                    padding-bottom: 0;
+                }
+
+                &::before {
+                    content: '';
+                    width: 15px;
+                    height: 8px;
+                    display: block;
+                    border-left: 4px solid $red;
+                    border-bottom: 4px solid $red;
+                    transform: rotate(-45deg);
+                    position: absolute;
+                    left: 0;
+                    top: 2px;
+                }
+            }
+        }
     }
 }
