--- a/src/blocks/components/_components.scss
+++ b/src/blocks/components/_components.scss
@@ -8,5 +8,5 @@
 //@import 'burger/burger.scss';
 @import 'faq/faq.scss';
 // @import 'mobile-menu/mobile-menu.scss';
-// @import 'pagination/pagination.scss';
+@import 'pagination/pagination.scss';
 // @import 'star-rating/star-rating.scss';
