--- a/src/blocks/components/pagination/pagination.scss
+++ b/src/blocks/components/pagination/pagination.scss
@@ -1,35 +1,28 @@
+.section-pagination {
+    @include section-padding;
+    padding-top: 0 !important;
+    padding-bottom: 75px;
+}
+
 .pagination {
     display: flex;
     justify-content: space-between;
     width: 100%;
-    padding-right: rem(15);
 
-    @media screen and (max-width: $w992) {
-        flex-wrap: wrap;
-    }
-
-    @media screen and (max-width: $w480) {
-        flex-direction: column;
-
-        &__all {
-            margin-bottom: rem(15);
-
-            @media screen and (max-width: $w992) {
-                width: 100%;
-            }
-        }
-    }
 
 
     &__page {
 
-        @media screen and (max-width: $w992) {
-            width: 100%;
-            padding-top: rem(25);
-        }
+
 
         display: flex;
         align-items: center;
+        margin-left: auto;
+        margin-right: auto;
+
+        @media screen and (min-width: $w992) {
+            margin-right: 0;
+        }
 
         & ul {
             display: flex;
@@ -39,42 +32,48 @@
 
                 margin-left: rem(10);
 
-                @media screen and (max-width: $w480) {
-                    margin-left: rem(7);
-
-                }
-
                 &:first-child {
                     margin-left: 0;
                 }
 
                 &.active a {
-                    border-color: $black;
-                    color: $black;
+                    background-color: $red;
+                    color: #fff;
+
+                    & svg {
+                        fill: #fff;
+                    }
                 }
 
                 & a {
-                    width: rem(60);
-                    height: rem(60);
+                    width: rem(40);
+                    height: rem(40);
                     display: flex;
-                    border: 1px solid $main;
+                    border-radius: 10px;
                     align-items: center;
                     justify-content: center;
                     color: $black;
+                    background-color: #f1f1f1;
 
-                    @media screen and (max-width: $w576) {
-                        width: 45px;
-                        height: 45px;
+                    @media screen and (min-width: $w992) {
+                        width: rem(55);
+                        height: rem(55);
                     }
 
-                    @media screen and (max-width: $w480) {
-                        width: 42px;
-                        height: 42px;
-                        font-size: 13px;
+                    & svg {
+                        fill: #000;
                     }
+
+
+
 
                     &:hover {
-                        border-color: $black;
+                        background-color: $red;
+                        color: #fff;
+
+                        & svg {
+                            fill: #fff;
+                        }
                     }
                 }
 
