--- a/src/blocks/modules/_modules.scss
+++ b/src/blocks/modules/_modules.scss
@@ -27,3 +27,9 @@
 
 /* blog */
 @import "blog/blog.scss";
+
+/* contact-page */
+@import "contact-page/contact-page.scss";
+
+/* contact-page */
+@import "blog-details/blog-details.scss";
