--- a/src/blocks/modules/our-blog/our-blog.pug
+++ b/src/blocks/modules/our-blog/our-blog.pug
@@ -15,7 +15,7 @@ mixin our-blog
                   .blog-main__title: a(href='#') Biggest Bank Robberies of the 21st Century
                   .blog-main__desc: span Available any time of day or night, in and around Vancouver. Fastest arrival at any address.
                   .blog-main__more
-                    a(href="#")
+                    a(href="/blog-detail.html")
                       +icons('#ic_link-arrow', 38)
                       span Learn more
           .our-blog__last
@@ -26,7 +26,7 @@ mixin our-blog
                   .blog-mini__title: a(href='#') Is picking a lock easy?
                   .blog-mini__desc: span The easiest way to pick a lock is to utilize the quick and also dirty method: scrubbing up. The stress wrench is the trick (no pun planned) to efficiently selecting a lock. So take your tension wrench as well as area it in all-time low of the crucial hole. 
                   .blog-mini__more
-                    a(href="#")
+                    a(href="/blog-detail.html")
                       +icons('#ic_link-arrow', 38)
                       span Learn more
               .our-blog__item
@@ -39,6 +39,6 @@ mixin blog-mini
     .blog-mini__title: a(href='#') Which locks are the hardest to pick?
     .blog-mini__desc: span As a general guideline, combination locks are more difficult to select (fracture) than the pin and also stemless glass locks. The exemption is baggage combo locks, the code to which 
     .blog-mini__more
-      a(href="#")
+      a(href="/blog-detail.html")
         +icons('#ic_link-arrow', 38)
         span Learn more
