--- a/src/blocks/modules/our-services/our-services.pug
+++ b/src/blocks/modules/our-services/our-services.pug
@@ -18,6 +18,6 @@ mixin card-service(data)
     .card-service__desc
       span= data.desc
     .card-service__link
-      a(href='#')
+      a(href='/service-detail.html')
         +icons('#ic_link-arrow', 38)
         span Learn more
