--- a/src/styles/base/_general.scss
+++ b/src/styles/base/_general.scss
@@ -158,6 +158,12 @@ main {
 }
 
 .formated-text {
+
+    & a {
+        color: $red;
+        text-decoration: underline;
+    }
+
     & p {
         font-size: 16px;
 
@@ -169,6 +175,7 @@ main {
     & ul {
 
         @include row-flex;
+        padding: 20px 0;
 
         @media screen and (min-width: $w760) {
             padding-top: 20px;
@@ -210,6 +217,58 @@ main {
         width: 100%;
         max-width: 100%;
         border-radius: 10px;
+    }
+
+    & ol {
+        counter-reset: number-list 00;
+        padding-left: 0;
+        padding: 20px 0;
+
+        @include row-flex;
+
+
+        &>li {
+
+            @include col;
+            @include size(12);
+            @include size-w767(6);
+
+            counter-increment: number-list 1;
+            list-style-type: none;
+            padding-left: 60px;
+            position: relative;
+            min-height: 40px;
+            margin-bottom: 15px;
+            font-weight: bold;
+            color: #000;
+
+            @media screen and (min-width: $w760) {
+                min-height: 45px;
+                padding-left: 70px;
+            }
+
+            &::before {
+                content: counter(number-list);
+                width: 40px;
+                height: 40px;
+                border-radius: 10px;
+                background-color: #1B1A1C;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                font-size: 18px;
+                color: #fff;
+                font-weight: bold;
+                position: absolute;
+                left: 0;
+                top: -0.4em;
+
+                @media screen and (min-width: $w760) {
+                    width: 45px;
+                    height: 45px;
+                }
+            }
+        }
     }
 }
 
