--- a/src/blocks/modules/_modules.scss
+++ b/src/blocks/modules/_modules.scss
@@ -31,5 +31,14 @@
 /* contact-page */
 @import "contact-page/contact-page.scss";
 
-/* contact-page */
+/* details-page */
 @import "blog-details/blog-details.scss";
+
+/* vacancy-page */
+@import "vacancy/vacancy.scss";
+
+/* projects-page */
+@import "projects/projects.scss";
+
+/* text-page */
+@import "text-page/text-page.scss";
