--- a/src/data/data.pug
+++ b/src/data/data.pug
@@ -129,7 +129,7 @@
         },
       {  
         'text': 'Precent Project', 
-        'href': 'project.html',  
+        'href': 'projects.html',  
 
         },
       {  
@@ -306,9 +306,34 @@
         'The valued employee Alan treats the company as if it was his own and actually even better because it’s not. He goes way out of his way to make sure everything from all ends are looked after . I had a pleasure dealing with this company.',
       ],
     }, 
+    ],
 
-
-  ]
+    project: [
+      {
+        image: '/img/project/p1',
+        title: 'called TOP Locksmith Vancouver locksmith to find out why my lock wasnt working.'
+      },
+      {
+        image: '/img/project/p2',
+        title: 'Great people outstanding service , the valued employee'
+      },
+      {
+        image: '/img/project/p3',
+        title: 'called TOP Locksmith Vancouver locksmith to find out why my lock wasnt working.'
+      },
+      {
+        image: '/img/project/p4',
+        title: 'called TOP Locksmith Vancouver locksmith to find out why my lock wasnt working.'
+      },
+      {
+        image: '/img/project/p5',
+        title: 'Great people outstanding service , the valued employee'
+      },
+      {
+        image: '/img/project/p6',
+        title: 'called TOP Locksmith Vancouver locksmith to find out why my lock wasnt working.'
+      },
+    ]
 
   };
 
