--- a/src/styles/base/_general.scss
+++ b/src/styles/base/_general.scss
@@ -275,7 +275,7 @@ main {
 
 
 :root {
-    --fancybox-accent-color: #9C938C;
+    --fancybox-accent-color: #BF3232;
     --carousel-button-width: 48px;
     --carousel-button-height: 48px;
     --carousel-button-svg-width: 27px;
@@ -283,7 +283,6 @@ main {
     --fancybox-bg: rgba(24, 24, 27, 0.92);
     --fancybox-thumbs-width: 96px;
     --fancybox-thumbs-border-radius: 0px;
-    --swiper-navigation-color: #fff;
 
     // @media screen and (max-width: $w1440) {
     //     --swiper-navigation-size: 28px
