--- a/src/blocks/modules/common/page-404/page-404.pug
+++ b/src/blocks/modules/common/page-404/page-404.pug
@@ -1,7 +1,17 @@
 mixin page-404
   section.section-page-404
     .page-404 
-      .page-404__title Page not found
-      .page-404__subtitle The page you were looking for for some reason is no longer located at the requested address.
-      .page-404__btn
-        a(href='#'): button.btn Back to home
+      .page-404__bg
+        +pictureResp({
+          w1200: '/img/common/first-block-bg',
+          w760: '/img/common/first-block-bg_760',
+          w480: '/img/common/first-block-bg_480',
+          def: '/img/common/first-block-bg_480',
+          lazy: true
+        })
+      .page-404__content
+        .container
+          .page-404__title Looks like you`re lost, Friend
+          .page-404__subtitle The page you are looking for can`t be found
+          .page-404__btn
+            a(href='/'): button.btn Back to home
