--- a/src/blocks/modules/common/page-404/page-404.scss
+++ b/src/blocks/modules/common/page-404/page-404.scss
@@ -1,46 +1,55 @@
-.section-page-404 {
-    @include section-padding;
-}
+.section-page-404 {}
 
 
 .page-404 {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding-bottom: rem(60);
 
-    &__img {
-        padding-bottom: rem(30);
+    position: relative;
+
+    &__bg {
+        @include layer(1);
+
+        & picture {
+            width: 100%;
+            height: 100%;
+
+            & img {
+                width: 100%;
+                height: 100%;
+            }
+        }
+    }
+
+    &__content {
+        position: relative;
+        z-index: 2;
+        background: linear-gradient(0deg, rgba(36, 36, 36, 0.82), rgba(36, 36, 36, 0.82));
+        color: #fff;
+        height: 90vh;
+
+        display: flex;
+        align-items: center;
+        justify-content: center;
+
+        padding: 120px 0 80px 0;
+        min-height: 550px;
+
     }
 
     &__title {
         @include section-title;
-        color: #222B32;
-        padding-bottom: rem(25);
+        color: #fff;
+        margin-bottom: 35px;
+        text-align: center;
     }
 
     &__subtitle {
-        font-size: 16px;
-        line-height: 24px;
+        color: #E1E1E1;
         text-align: center;
-        padding-bottom: rem(45);
-
-        @media screen and (max-width: $w1200) {
-            font-size: 14px;
-        }
-
+        margin-bottom: 35px;
     }
 
     &__btn {
-
-        width: 100%;
-        max-width: 260px;
-
-        & a,
-        & .btn {
-            width: 100%;
-
-        }
+        display: flex;
+        justify-content: center;
     }
-
 }
